JP-2707: Move fail-safe maven plugin settings to the correct pom